update app user notifications
